# Golden-Config

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DETAILED.md  COMPLETE_TUTORIAL.md  GOLDEN_CONFIG_TUTORIAL.md  INTERVIEW_PREP_GUIDE.md  INTERVIEW_QA_200.md  LICENSE  Makefile  README.md  STUDY_GUIDE_ANSWERS.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  initial_data.py  main.py  observability.py  worker.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_initial.py  __init__.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  auth.py  configs.py  devices.py  drivers.py  health.py  jobs.py  router.py  shares.py  users.py
backend/app/core/: __init__.py  config.py  crypto.py  logging.py  redis.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/drivers/: __init__.py  base.py  registry.py  rest_drivers.py  ssh_drivers.py
backend/app/models/: __init__.py  audit.py  config_file.py  device.py  enums.py  job.py  share_request.py  user.py
backend/app/schemas/: common.py  config_file.py  device.py  job.py  share.py  user.py
backend/app/services/: audit_service.py  config_service.py  device_service.py  job_service.py  share_service.py  user_service.py
backend/app/tasks/: device_tasks.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth.py  test_configs_shares.py  test_devices.py  test_jobs.py  test_tasks.py
backend/tests/unit/: test_drivers.py  test_imports.py  test_security.py
deploy/caddy/: Caddyfile
deploy/k8s/: 00-namespace.yaml  10-config.yaml  20-data.yaml  30-backend.yaml  40-frontend.yaml
deploy/lightsail/: DEPLOY.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  (+1 more)
(+22 files in other folders)
