[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "golden-config-backend"
version = "0.1.0"
description = "Golden Config — capture and enforce network device configuration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "email-validator>=2.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "cryptography>=42.0",
    "redis>=5.0",
    "celery>=5.4",
    "httpx>=0.27",
    "netmiko>=4.4",
    "napalm>=5.0",
    "tenacity>=8.4",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
    "ruff>=0.6",
    "black>=24.10",
    "mypy>=1.11",
    "types-redis",
]
otel = [
    "opentelemetry-distro>=0.47b0",
    "opentelemetry-exporter-otlp>=1.26",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.47b0",
    "prometheus-fastapi-instrumentator>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["B008"]  # FastAPI uses function calls (Depends) in argument defaults

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["app"]
omit = ["app/alembic/*"]
